# greatfallstoolbus.org

./: .bazelrc  .dockerignore  .envrc  .gitignore  .gitleaks.toml  .sops.yaml  AGENTS.md  BUILD.bazel  CHANGELOG.md  CLAUDE.md  ContainerFile  Justfile  LICENSE  LICENSE-content  MODULE.bazel  NOTICE  README.md  RELEASING.md  SECURITY.md  eslint.config.ts  flake.nix  package.json  pnpm-lock.yaml  secrets.contract.yaml  svelte.config.js  tinyland.repo.json  vite.config.ts
.agents/skills/gftb-keyholders-mail/: SKILL.md
.agents/skills/gftb-mail-laceup-apple-mail/: SKILL.md
.agents/skills/gftb-mail-laceup-geary/: SKILL.md
.agents/skills/gftb-mail-laceup-gmail/: SKILL.md
.agents/skills/gftb-mail-laceup-kmail/: SKILL.md
.agents/skills/gftb-mail-laceup-outlook/: SKILL.md
.agents/skills/gftb-mail-laceup-sieve/: SKILL.md
.agents/skills/gftb-mail-laceup-thunderbird/: SKILL.md
.agents/skills/tinyland-flywheel-bazel/: SKILL.md
.agents/skills/tinyland-scaffold-doctor/: SKILL.md
.agents/skills/tinyland-spawn-sister-site/: SKILL.md
.agents/skills/tinyland-static-spoke/: SKILL.md
.agents/skills/tinyland-static-spoke/agents/: openai.yaml
.agents/skills/tinyland-whoami/: SKILL.md
.claude-plugin/: marketplace.json
.claude/skills/: gftb-keyholders-mail  gftb-mail-laceup-apple-mail  gftb-mail-laceup-geary  gftb-mail-laceup-gmail  gftb-mail-laceup-kmail  gftb-mail-laceup-outlook  gftb-mail-laceup-sieve  gftb-mail-laceup-thunderbird
.github/: PULL_REQUEST_TEMPLATE.md  lanes.json
.github/ISSUE_TEMPLATE/: bug.md  feature.md  provider-request.md
.github/workflows/: ci.yml  cloudflare-dns-drift.yml  container-ghcr.yml  deploy-pages.yml  lane-env.yml  pages-project-delete.yml  production-health.yml  pulse-ingest.yml  release.yml
docs/: CI-SCHEMA.md  DEVELOPMENT.md  agent-adoption.md  attribution.md  contributing-photos.md  naming-consent.md  ux-research.md
docs/decisions/: 0001-gftb-mvp-decisions.md  0002-blahaj-substrate-boundary.md  0003-hosting-and-remote-posture.md  0004-gate-opening-criteria.md  0005-wave1-content-ratification.md  0006-interim-logo-wikimedia.md  0007-gitops-dev-default-shadow-deploy.md  0007-private-repos-rollback-gap.md  0008-oncluster-production-hosting.md  0009-gitops-dev-default-shadow-deploy.md  0010-on-prem-is-the-production-host.md  dynamic-canary-blue-green.md  dynamic-spoke-adapter-mode.md
docs/deploy/: cloudflare-pages.md  oncluster-container-readiness.md
docs/launch/: apex-flip-readiness.md
docs/release/evidence/frontend-stack-truth-bump-20260702T0558Z/: README.md  contract-negative-test.txt  just-check.txt  npm-latest-verification.txt  tailwind-audit.md
docs/research/: hyperkitty-ui-alternatives.md
docs/runbooks/: cf-pages-rollback.md  dns-apply-blahaj.md  dns-apply.md  dns-mail-checklist.md  keyholders-client-setup.md
docs/schemas/: blahaj-dispatch.schema.json  lane-ttl-reap-dispatch.schema.json  lanes.schema.json  public-preview-dispatch.schema.json  tinyland-repo-manifest.schema.json
docs/spec/: massageithaca-pattern-backfeed-2026-05-19.md  observability-shape-2026-06-05.md  runtime-broker-display-2026-05-19.md  skeleton-v5-watch-2026-06-05.md  static-projection-ingest-gate-2026-05-10.md  tinyland-repo-taxonomy-and-gitops-contract-2026-05-19.md
e2e/: mobile-nav.spec.ts
nix/: oci-image.nix
plugins/scaffold-core/: plugin.json
plugins/scaffold-core/skills/: tinyland-flywheel-bazel  tinyland-repo-contract  tinyland-scaffold-doctor  tinyland-spawn-sister-site  tinyland-static-spoke  tinyland-whoami
scratch/: after.txt  before.txt
scripts/: build-agent-skills.mjs  build-source-map.mjs  check-conformance.sh  flywheel-enrollment-contract-test.sh  optimize-images.js  rebrand.sh  render-keyholders-mail-surfaces.mts  scan-internal-endpoints.sh  scan-internal-endpoints.test.mts  validate-skills.py  validate-tools.mts
scripts/bazel/: run-vite-build.mjs
src/: app.css  app.html  hooks.server.ts  svx.d.ts
src/content/tools/network/: ethernet-splicing-and-testing-gear.svx  fluke-tone-generator-and-probe-set.svx  (+2 more)
src/lib/: build-info.test.ts  build-info.ts  cell-doc.test.ts  cell-doc.ts  contact-form.test.ts  contact-form.ts  flags.test.ts  flags.ts  house-stack-contract.test.ts  motion.svelte.ts  nav-items.ts  repo.ts  responsive-image.ts  source-link.test.ts  theme.svelte.ts  tint.test.ts  tint.ts  toaster.ts
src/lib/components/: Avatar.svelte  BindableDrawer.svelte  BusMark.svelte  Card.svelte  ContributeMenu.svelte  CopyAddressButton.svelte  DetailsNeeded.svelte  DiscussThreads.svelte  ExternalLink.svelte  InfoTip.svelte  Markdown.svelte  PageHeader.svelte  Picture.svelte  SEOHead.svelte  SaturnMark.svelte  SourceLink.svelte  ThemeSwitcher.svelte  Wordmark.svelte
src/lib/data/: cells.ts  credits.ts  discuss-snapshot.ts  keyholders-mail.ts  mail-clients.ts  tool-schema.ts
src/lib/docs/: markdown.test.ts  markdown.ts  registry.ts
src/lib/runes/: scroll-state.svelte.ts
src/lib/server/: discuss-archive.test.ts  discuss-archive.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/access/: +page.svelte
src/routes/agent/: +page.server.ts  +page.svelte
src/routes/bibliography/: +page.svelte
src/routes/cell-sheets/: +page.svelte
src/routes/cells/: +page.svelte
src/routes/contact/: +page.svelte
src/routes/discuss/: +page.server.ts  +page.svelte  +page.ts
src/routes/docs/: +page.svelte
src/routes/donate/: +page.svelte
src/routes/find-the-bus/: +page.svelte
src/routes/health/: +server.ts
src/routes/keyholders/: +page.svelte
src/routes/mission/: +page.svelte
src/routes/plans/: +page.svelte
src/routes/safety/: +page.svelte
src/routes/shout-outs/: +page.svelte
src/routes/sitemap.xml/: +server.ts
src/routes/stewards/: +page.svelte
src/routes/tools/: +page.svelte
src/routes/wants/: +page.svelte
static/: CNAME  _redirects  agent-map.md  image-manifest.json  llms.txt  readme.txt  robots.txt
tofu/: README.md  backend.tf  dynamic-spoke-deploy-target.tf  main.tf  spoke.auto.tfvars
tofu/dns-intent/: README.md  intent.yaml
tofu/mail-intent/: README.md  intent.yaml
(+26 files in other folders)
