"""
Root BUILD.bazel for greatfallstoolbus.org.

The SvelteKit static site still has ergonomic pnpm-backed Justfile recipes, but
Bazel owns finite graphable targets for Flywheel cache/RBE proof surfaces.
"""

load("@aspect_rules_js//js:defs.bzl", "js_binary", "js_run_binary", "js_test")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("@npm//:eslint/package_json.bzl", eslint_bin = "bin")
load("@npm//:prettier/package_json.bzl", prettier_bin = "bin")
load("@npm//:vitest/package_json.bzl", vitest = "bin")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

npm_link_all_packages(name = "node_modules")

filegroup(
    name = "app_srcs",
    srcs = glob(
        [
            "src/**",
            "static/**",
            "scripts/**/*.mts",
            "scripts/bazel/**/*.mjs",
        ],
        allow_empty = True,
    ) + [
        ".npmrc",
        "package.json",
        "playwright.config.ts",
        "pnpm-lock.yaml",
        "pnpm-workspace.yaml",
        "svelte.config.js",
        "tsconfig.json",
        "vite.config.ts",
        "vitest.config.ts",
    ],
)

filegroup(
    name = "e2e_srcs",
    srcs = glob(["e2e/**"], allow_empty = True),
)

js_binary(
    name = "sveltekit_sync_bin",
    data = [":node_modules"],
    entry_point = "scripts/bazel/run-sveltekit-sync.mjs",
)

js_run_binary(
    name = "sveltekit_types",
    srcs = [":app_srcs"],
    out_dirs = [".svelte-kit"],
    tags = ["flywheel-eligible"],
    tool = ":sveltekit_sync_bin",
)

js_binary(
    name = "svelte_check_bin",
    data = [":node_modules"],
    entry_point = "scripts/bazel/run-svelte-check.mjs",
)

js_test(
    name = "svelte_check_test",
    data = [
        ":app_srcs",
        ":node_modules",
        ":sveltekit_types",
    ],
    entry_point = "scripts/bazel/run-svelte-check.mjs",
    tags = ["flywheel-eligible"],
    timeout = "long",
)

# Remote-eligible lint as a cache-first Bazel TEST target (TIN-2226). Runs the
# same `eslint .` the `lint` recipe runs, but as a CAS-cacheable action so the
# GloriousFlywheel shared cache can serve a green result. READ-ONLY: no writes.
eslint_bin.eslint_test(
    name = "eslint_test",
    args = ["."],
    data = [
        ":app_srcs",
        ":node_modules",
        ":sveltekit_types",
        "eslint.config.ts",
    ],
    tags = ["flywheel-eligible"],
    timeout = "moderate",
)

# Remote-eligible format check as a cache-first Bazel TEST target (TIN-2226).
# Mirrors `prettier --check .` (the `format-check` recipe) as a CAS-cacheable,
# READ-ONLY action — it never rewrites files.
prettier_bin.prettier_test(
    name = "prettier_check_test",
    args = [
        "--check",
        ".",
    ],
    data = [
        ":app_srcs",
        ":node_modules",
        ".prettierignore",
        ".prettierrc",
    ],
    tags = ["flywheel-eligible"],
    timeout = "short",
)

js_binary(
    name = "vite_build_bin",
    data = [":node_modules"],
    entry_point = "scripts/bazel/run-vite-build.mjs",
)

js_run_binary(
    name = "build",
    srcs = [
        ":app_srcs",
        ":sveltekit_types",
    ],
    out_dirs = ["build"],
    patch_node_fs = False,
    tags = ["flywheel-eligible"],
    tool = ":vite_build_bin",
    visibility = ["//visibility:public"],
)

vitest.vitest_test(
    name = "unit_tests",
    data = [
        ":app_srcs",
        ":node_modules",
        ":node_modules/vitest",
        "vitest.config.ts",
    ],
    args = [
        "run",
        "--reporter=verbose",
        "--config",
        "$(rootpath vitest.config.ts)",
    ],
    tags = [
        "flywheel-eligible",
        "vitest",
    ],
    visibility = ["//visibility:public"],
)

js_test(
    name = "playwright_static_smoke",
    data = [
        ":build",
        ":e2e_srcs",
        ":node_modules",
        "scripts/bazel/run-playwright-static-smoke.mjs",
    ],
    entry_point = "scripts/bazel/run-playwright-static-smoke.mjs",
    tags = [
        "gloriousflywheel-rbe-candidate",
        "playwright",
        "web-playwright-chromium-static-smoke",
    ],
    timeout = "moderate",
    visibility = ["//visibility:public"],
)

test_suite(
    name = "ci_validation_suite",
    tests = [
        ":svelte_check_test",
        ":unit_tests",
    ],
)

# Proved static-spoke class: deployment-bundle-packaging (TIN-2543). Packages the
# adapter-static production build (//:build) into a deterministic deployment
# tarball. This is a hermetic rules_pkg action, so it is BOTH cache-eligible and
# executor-eligible (it is a proved static-spoke class) — tagged flywheel-eligible.
pkg_tar(
    name = "deployment_bundle",
    srcs = [":build"],
    extension = "tar.gz",
    tags = [
        "deployment-bundle-packaging",
        "flywheel-eligible",
    ],
    visibility = ["//visibility:public"],
)

# Container / OCI build target (TIN-2543): the deterministic input set the
# daemonless nix2container image build (flake `.#image` + `just
# container-image-publish`) consumes. flake.nix + flake.lock pin the PRIMARY
# nix2container path; nix/oci-image.nix is the retained nixpkgs-only fallback.
# It is CACHE-eligible (the shared GloriousFlywheel cache serves a green result
# for an unchanged recipe) but explicitly NOT executor-eligible: per skill rule 8
# + docs/CI-SCHEMA.md §5, `container-image-and-push` is blocked at the
# GloriousFlywheel manifest layer, so image assembly/push never runs on a remote
# executor. The tag is deliberately NOT "flywheel-eligible", so the
# `--{build,test}_tag_filters=flywheel-eligible` executor filter excludes it
# while cache-first mode (config=flywheel) still caches it. The SvelteKit build
# INPUTS remain cache-accelerated via //:build and //:sveltekit_types.
pkg_tar(
    name = "container_image_context",
    srcs = [
        "ContainerFile",
        "flake.lock",
        "flake.nix",
        "nix/oci-image.nix",
        "package.json",
        "pnpm-lock.yaml",
        "svelte.config.js",
    ],
    extension = "tar",
    tags = [
        "container-image-and-push",
        "gloriousflywheel-cache-only",
        "no-remote-exec",
    ],
    visibility = ["//visibility:public"],
)

exports_files(
    [
        "MODULE.bazel",
        "package.json",
        "playwright.config.ts",
        "pnpm-lock.yaml",
        "pnpm-workspace.yaml",
        "scripts/bazel/run-playwright-static-smoke.mjs",
        "scripts/bazel/run-svelte-check.mjs",
        "scripts/bazel/run-sveltekit-sync.mjs",
        "scripts/bazel/run-vite-build.mjs",
        "svelte.config.js",
        "tsconfig.json",
        "vite.config.ts",
        "vitest.config.ts",
    ],
    visibility = ["//visibility:public"],
)
